--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "5.0.1",
     "firebase": "^10.7.1",
     "axios": "^1.6.2",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "serve": "^14.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
