--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 python-dotenv==1.0.0
 firebase-admin==6.4.0
-Pillow==10.4.0
+Pillow>=10.4.0
 python-decouple==3.8
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
