Add ensurepip to install pip before using it

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,6 @@
 [phases.install]
 cmds = [
+  "python -m ensurepip --upgrade",
   "python -m pip install --upgrade pip setuptools wheel",
   "python -m pip install --no-cache-dir -r requirements.txt"
 ]
