--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,6 +1,8 @@
+[phases.setup]
+nixPkgs = ["python311", "python311Packages.pip"]
+
 [phases.install]
 cmds = [
-  "python -m ensurepip --upgrade",
   "python -m pip install --upgrade pip setuptools wheel",
   "python -m pip install --no-cache-dir -r requirements.txt"
 ]
