--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -3,9 +3,9 @@ nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-  "curl -sS https://bootstrap.pypa.io/get-pip.py | python",
-  "python -m pip install --upgrade pip setuptools wheel",
-  "python -m pip install --no-cache-dir -r requirements.txt"
+  "curl -sS https://bootstrap.pypa.io/get-pip.py | python --break-system-packages",
+  "python -m pip install --upgrade pip setuptools wheel --break-system-packages",
+  "python -m pip install --no-cache-dir -r requirements.txt --break-system-packages"
 ]
 
 [phases.build]
