--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "python manage.py migrate --noinput && python -m gunicorn recovery_center.wsgi --log-file - --bind 0.0.0.0:$PORT"
+startCommand = "python3 manage.py migrate --noinput && python3 -m gunicorn recovery_center.wsgi --log-file - --bind 0.0.0.0:$PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
