--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "firebase": "^10.7.1",
-    "axios": "^1.6.2",
-    "react-icons": "^4.12.0",
     "serve": "^14.2.1"
   },
   "scripts": {
@@ -35,5 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "typescript": "^4.9.5"
+  }
 }
